# cargo-prepublish

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: author.rs  categories.rs  description.rs  documentation.rs  homepage.rs  keys.rs  keywords.rs  license.rs  main.rs  readme.rs  repository.rs  supplementary.rs  validate.rs
