[package]
name = "cargo-prepublish"
edition = "2021"
version = "0.1.1"
authors = ["Leslie de Jager <dejagerleslie@gmail.com>"]
description = "A cargo plugin to help prepare a crate for publishing to Crates.io"
homepage = "https://github.com/ZimboPro/cargo-prepublish"
readme = "README.md"
categories = [
    "development-tools::cargo-plugins"
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZimboPro/cargo-prepublish"
exclude = [
    "Cargo.toml.bak"
]
keywords=[
    "cargo",
    "cargo-plugin",
    "prepublish"
]


[dependencies]
cargo_toml = "0.15.1"
dotenvy = "0.15.6"
env_logger = "0.10.0"
git2 = "0.16.1"
log = "0.4.17"
read_input = "0.8.6"
regex = "1.7.1"
thiserror = "1.0.38"
toml = "0.7.2"
toml_edit = "0.19.3"

[dependencies.clap]
version = "4.1.4"
features = [
    "derive"
]
